<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2021, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent-ws</artifactId>
        <version>28</version>
        <relativePath/>
    </parent>

    <groupId>org.gridsuite</groupId>
    <artifactId>gridsuite-explore-server</artifactId>
    <version>2.39.0-SNAPSHOT</version>

    <packaging>jar</packaging>
    <name>Explore server</name>
    <description>Explore service</description>
    <url>http://www.gridsuite.org/</url>

    <scm>
        <connection>scm:git:https://github.com/gridsuite/explore-server.git</connection>
        <developerConnection>scm:git:https://github.com/gridsuite/explore-server.git</developerConnection>
        <url>https://github.com/gridsuite/explore-server</url>
    </scm>

    <developers>
        <developer>
            <name>Etienne Homer</name>
            <email>etienne.homer@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <!-- FIXME to remove when powsybl-parent supports JDK25 -->
        <java.version>25</java.version>
        <maven.jacoco.version>0.8.15</maven.jacoco.version>
        <checkstyle.version>13.8.0</checkstyle.version>
        <maven.jib.version>3.5.1</maven.jib.version>
        <jib.from.image>powsybl/java:4.0.0</jib.from.image>
        <gridsuite-dependencies.version>51.1.0</gridsuite-dependencies.version>
        <mockwebserver3.version>5.0.0-alpha.14</mockwebserver3.version>
        <sonar.organization>gridsuite</sonar.organization>
        <sonar.projectKey>org.gridsuite:explore-server</sonar.projectKey>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <classpathDependencyExcludes>
                            <classpathDependencyExclude>com.powsybl:powsybl-config-classic</classpathDependencyExclude>
                        </classpathDependencyExcludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- overrides of imports -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp-bom</artifactId>
                <version>${mockwebserver3.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- imports -->
            <dependency>
                <groupId>org.gridsuite</groupId>
                <artifactId>gridsuite-dependencies</artifactId>
                <version>${gridsuite-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project specific dependencies -->
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Compilation dependencies -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-ws-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        </dependency>
        <!-- Runtime dependencies -->
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-config-classic</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver3-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.powsybl</groupId>
            <artifactId>powsybl-config-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream-test-binder</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wiremock</groupId>
            <artifactId>wiremock-jetty12</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
